--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eleventy-sample",
+  "name": "bite-sized-math-for-cs",
   "version": "1.0.0",
   "description": "",
   "private": true,
